Fixed coloring issues with dark mode

--- a/client/src/styling/guitar.css
+++ b/client/src/styling/guitar.css
@@ -151,6 +151,7 @@
   background: var(--body_background);
   padding: 1rem;
   border-radius: 0.5rem;
+  color: var(--text_color);
 }
 
 .chord-name {
